# weather_tv

./: nvs_data.csv  partitions_weather_tv.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/common/: common.c  common.h
main/display/: ui_task.c
main/display_task/: ui_task.h
main/display_task/city/: city.c  city.h
main/display_task/font/font_build/: const_font.xlsx  font_build.py  font_build.sh  font_build_config.json  get_bin.xlsx
main/driver/: littlefs_filesystem.c  littlefs_filesystem.h  wifi_sta.c  wifi_sta.h
main/msg_task/: mqtt_handle.c  mqtt_handle.h  mqtt_msg_def.c  mqtt_msg_def.h  msg_task.c  msg_task.h
main/net_connect_task/: net_connect_task.c  net_connect_task.h  wifi_handle.c  wifi_handle.h
main/weather_task/: wearther_task.c  weather_json_parse.c  weather_json_parse.h  weather_task.c  weather_task.h
tools/: html_to_str.py
